[gd_scene load_steps=6 format=2]

[ext_resource path="res://Common/Dice/Projectiles/DiceProjectile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Common/Dice/Projectiles/Explosive/ExplosiveSprite.png" type="Texture" id=2]
[ext_resource path="res://Common/Dice/Projectiles/Explosive/ExplosiveDice.gd" type="Script" id=3]
[ext_resource path="res://Common/Dice/Projectiles/Explosive/ExplosionArea.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 9.33333

[node name="ExposiveDice" instance=ExtResource( 1 )]
texture = ExtResource( 2 )
hframes = 4
script = ExtResource( 3 )
dice_name = "Explosive"
roll_time = 0.25
destory_timer = 0.6
explosion_area = ExtResource( 4 )

[node name="ExplosionTimer" type="Timer" parent="." index="1"]
one_shot = true

[node name="HitBox" parent="." index="3"]
collision_mask = 131072
col_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 0.666667 )
shape = SubResource( 1 )

[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
